# ez-aws-dns

./: .gitignore  README.md  pyproject.toml
src/ez_aws_dns/: main.py
