[tool.poetry]
name = "ez-aws-dns"
version = "0.1.0"
description = "Simple script to keep a DNS entry up to date in AWS R53."
authors = ["Rob McBride <rob@mrexception.com>"]
license = "WTFPLv2"
readme = "README.md"

[tool.poetry.scripts]
main = "ez_aws_dns.main:main"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.17.22"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
